# mini-zen

./: .env.example  .gitignore  AUGMENT_MCP_SETUP.md  AUGMENT_USAGE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_INSTRUCTIONS.md  OPTIMIZATION_SUMMARY.md  QUICK_INSTALL.md  README.md  TOOLS_COMPARISON.md  augment_config.json  augment_config_example.json  augment_demo.py  docker-compose.yml  function_interface.py  install.sh  local_server.py  mcp_discussion_server.py  mcp_server.py  package.json  pyproject.toml  requirements.txt  setup_standalone.sh  simple_test.py  start_local.sh  test-local.sh  test_consensus_tool.py  test_discussion.py  test_http_api.py  test_mcp_server.py  test_models.py  test_real_api.py  test_standalone.py
mcp_sdk/: __init__.py
mcp_sdk/core/: __init__.py  main_logic.py  provider_manager.py
mcp_sdk/providers/: __init__.py  base.py  gemini.py  openai_compatible.py  openai_provider.py  openrouter.py  openrouter_registry.py
mcp_sdk/system_prompts/: __init__.py  light_chat.py  light_consensus.py
mcp_sdk/utils/: __init__.py  context_compression.py  model_optimizer.py  model_restrictions.py  token_budget.py  token_utils.py
tests/: __init__.py  test_consensus_workflow.py  test_conversation_threading.py  test_token_optimization.py
