[project]
name = "mcp_sdk"
version = "0.1.0"
description = "Lightweight Python library for AI-to-AI conversation threading and consensus workflows"
authors = [
    {name = "MCP SDK Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "google-generativeai", 
    "requests",
]

[project.urls]
Homepage = "https://github.com/your-org/mcp_sdk"
Repository = "https://github.com/your-org/mcp_sdk"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_sdk*"]
